force-app/main/default/objects/Interview__c/fields/Interviewcode__c.field-meta.xml
<CustomField>
    <fullName>Interviewcode__c</fullName>
    <displayFormat>IN-{000000}</displayFormat>
    <label>Interview code</label>
    <type>AutoNumber</type>
</CustomField>