force-app/main/default/objects/Interview__c/fields/Interviewer02__c.field-meta.xml
<CustomField>
    <fullName>Interviewer02__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer (02)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interview2</relationshipName>
    <type>Lookup</type>
</CustomField>