force-app/main/default/objects/Interview__c/fields/Interviewer03__c.field-meta.xml
<CustomField>
    <fullName>Interviewer03__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer (03)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interview3</relationshipName>
    <type>Lookup</type>
</CustomField>