force-app/main/default/objects/Interview__c/fields/Interviewschedule__c.field-meta.xml
<CustomField>
    <fullName>Interviewschedule__c</fullName>
    <label>Interview schedule</label>
    <type>DateTime</type>
</CustomField>