force-app/main/default/objects/Interview__c/fields/Jobopening__c.field-meta.xml
<CustomField>
    <fullName>Jobopening__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Opening</label>
    <referenceTo>Job_Opening__c</referenceTo>
    <relationshipLabel>Interview</relationshipLabel>
    <relationshipName>Interview</relationshipName>
    <type>Lookup</type>
</CustomField>